--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ nav ul li a:hover::after{
 #about{
     padding: 80px 0;
     color: #080808;
+    font-family: 'Times New Roman', Times, serif;
 }
 .row{
     display: flex;
