--- a/style.css
+++ b/style.css
@@ -344,7 +344,7 @@ nav .fas{
         font-size: 25px;
     }
     nav ul{
-        background: #ff004f;
+        background: #F3D250;
         position: fixed;
         top: 0;
         right: -200px;
