--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ nav ul li a:hover::after{
     margin-top: 50px;
 }
 .services-list div{
-    background: #262626;
+    background: linear-gradient(rgba(125,42,232), #ECECEC);
     padding: 40px;
     font-size: 13px;
     font-weight: 300;
@@ -185,7 +185,7 @@ nav ul li a:hover::after{
     display: inline-block;
 }
 .services-list div:hover{
-    background: #ff004f;
+    background: linear-gradient(rgba(125,42,232), #ECECEC);
     transform: translateY(-10px);
 }
 /* -------portfolio----------- */
